# practice-storefornt-django2

./: README.md  pyproject.toml
shoppingcart/: settings.py  urls.py
static/css/: main.css
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_product.py  0003_productimage.py  0004_purchaseorder.py  0005_alter_product_price_alter_product_price_currency_and_more.py  0006_rename_purchaseorderlineitem_purchaseorderitem_and_more.py
store/templates/store/: cart.html  checkout.html  detail.html  main.html  store.html
store/templates/user/: login.html  logout.html  register.html
