[tool.poetry]
name = "practice-storefornt-django2"
version = "0.1.0"
description = ""
authors = ["jezozobrado <124932574+jezozobrado@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "practice_storefornt_django2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
django-money = "^3.0.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
